[package]
name = "env-senso-rs"
version = "0.1.0"
authors = ["Toby Hutton <toby@grusly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0"
clap = "3.0.0-beta.2"
http = "0"
json = "0"
reqwest = { version = "0", features = ["blocking"] }
